syntax = "proto3";

package liverpool;

service PlayerService {
    rpc GetPlayer(Empty) returns (Player);
}

message Empty {
    
}

message Player {
    int32 player_id = 1;
    string name = 2;
}